# multi-agent-coding-development-system

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: AGENTS.md  ARCHITECTURE.md  CONTRACTS.md  README.md  SETUP.md  STATE_OF_THE_ART.md  WORKFLOWS.md
docs/paper/: MACDS_PAPER.md
macds/: __init__.py  main.py
macds/agents/: __init__.py  architect.py  base.py  build_test.py  implementation.py  infra.py  integrator.py  product.py  reviewer.py
macds/core/: __init__.py  artifacts.py  contracts.py  evaluation.py  memory.py  orchestrator.py  schema_loader.py
macds/execution/: __init__.py  analyzers.py  build_runner.py  test_runner.py
macds/schemas/artifacts/: api_contracts.yaml  architecture.yaml  coding_standards.yaml  design_decisions.yaml  requirements.yaml  risk_register.yaml
macds/schemas/contracts/: architecture.yaml  build_test.yaml  code_review.yaml  implementation.yaml  infrastructure.yaml  integration.yaml  requirements.yaml
macds/templates/: API_CONTRACTS.yaml  ARCHITECTURE.md  CODING_STANDARDS.md  REQUIREMENTS.md  RISK_REGISTER.md
macds/tests/: test_macds.py
